src/objects/PagesApi__Form__c.object
<CustomObject>
    <description>Build and publish responsive HTML5 web forms to portal communities or your public facing website.</description>
    <fields>
        <fullName>Form_URL__c</fullName>
        <formula>&quot;https://fontevacustomer-160ec05bb8f.force.com/cpbase__form?ID=&quot; &amp; Id</formula>
        <label>Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <description>Optional description for the Form.</description>
        <inlineHelpText>Optional description for the Form.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_Style__c</fullName>
        <description>Defines the display style for the Form. Can be Standard, Accordion or Wizard</description>
        <inlineHelpText>Defines the display style for the Form. Can be Standard, Accordion or Wizard</inlineHelpText>
        <label>Display Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Accordion</fullName>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Submit_Style__c</fullName>
        <description>Defines the submit style for the Form. Can be Url Location or Javascript</description>
        <inlineHelpText>Defines the submit style for the Form. Can be Url Location or Javascript</inlineHelpText>
        <label>Submit Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Submit_Value__c</fullName>
        <description>URL Location or Javascript to execute on form submission</description>
        <inlineHelpText>URL Location or Javascript to execute on form submission</inlineHelpText>
        <label>Submit Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__User_Instructions__c</fullName>
        <description>Enter the instructions you wish to show users while filling out the form.</description>
        <inlineHelpText>Enter the instructions you wish to show users while filling out the form.</inlineHelpText>
        <label>User Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Wizard_Review_Instructions__c</fullName>
        <defaultValue>&quot;Please review your answers and make any necessary corrections before submitting this form.&quot;</defaultValue>
        <description>For Wizard-style forms only. This text appears on the final review screen.</description>
        <inlineHelpText>For Wizard-style forms only. This text appears on the final review screen.</inlineHelpText>
        <label>Wizard Review Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>PagesApi__All</fullName>
        <columns>NAME</columns>
        <columns>PagesApi__Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PagesApi__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>